Feat: Implement Info Section Impelment the Info Section with centred layout and panes with text below.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <main>
                 <section class="hero">
                     <div class="left-hero">
-                        <h1 class="hero-headline">Meet More Paw Pals</h1>
+                        <h1 class="hero-headline">Find Pals For Your Pet</h1>
                         <div class="hero-sub-heading">Give your beloved dog the social life it deserves. Connect with pets and owners who meet your dog's needs.</div>
                         <button class="signup-button">Sign up</button>
                     </div>
@@ -34,11 +34,23 @@
                 </section>
                 
                 <section class="info">
-                    <h1>Find pals for your pet</h1>
-                    <div class="info-box">one</div>
-                    <div class="info-box">two</div>
-                    <div class="info-box">three</div>
-                    <div class="info-box">four</div>
+                    <div class="info-heading">
+                        <h1>Meet More Paw Pals</h1>
+                    </div>
+                    <div class="info-box-container">
+                        <div class="info-boxes">
+                            <div class="info-box"></div>
+                            <div class="info-box"></div>
+                            <div class="info-box"></div>
+                            <div class="info-box"></div>
+                        </div>
+                        <div class="info-box-sub-texts">
+                            <div class="info-box-sub-text">This is sub text 1 under an illustration or image</div>
+                            <div class="info-box-sub-text">This is sub text 2 under an illustration or image</div>
+                            <div class="info-box-sub-text">This is sub text 3 under an illustration or image</div>
+                            <div class="info-box-sub-text">This is sub text 4 under an illustration or image</div>
+                        </div>
+                    </div>
                 </section>
                 
                 <section class="quote"> 
