Feat: Implement Quote Section Implement the final Quote Section with correct formatting to complete the landing page task.

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 </section>
                 
                 <section class="quote"> 
-                    "It's right to be picky when it comes to the friends your pet makes. Take time to find dogs that socialise well together and share the same interests, likes and disklikes, just as you would your child." - Nemesis
+                    <div class="quote-text">"It's right to be picky when it comes to the friends your pet makes. Take time to find dogs that socialise well together and share the same interests, likes and disklikes, just as you would your child." - Nemesis</div>
                 </section>
                 
                 <section class="signup">
