Feat: Implement Call To Action Section Implement the Call to Action section (second from bottom).

--- a/index.html
+++ b/index.html
@@ -61,9 +61,23 @@
                     <dialog>This is a modal</dialog>
                 </section>
                 
+                <section class="call-to-action">
+                    <div class="call-to-action-content">
+                        <div class="call-to-action-left">
+                            <h2 class="call-to-action-heading">Call to Action! It's Time!</h2>
+                            <span class="call-to-action-text">Sign Up to receive our latest news in your inbox</span>
+                        </div>
+                        <div class="call-to-action-right">
+                            <button class="call-to-action-button">Sign Up</button>
+                        </div>
+                    </div>
+                </section>
             </main>
             
-            <footer> Copyright © nick john williams 2021</footer>
+            <footer> 
+                    <span class="footer-text">Copyright © nick john williams 2021</span>
+                </div>
+            </footer>
         </body>
     </HTML>
     <body
